--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <script src="js/resources.js"></script>
+    <script src="js/genericObjects.js"></script>
     <script src="js/actionFigure.js"></script>
+    <script src="js/rock.js"></script>
     <script src="js/enemy.js"></script>
     <script src="js/player.js"></script>
     <script src="js/app.js"></script>
