--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="js/genericObjects.js"></script>
     <script src="js/actionFigure.js"></script>
     <script src="js/rock.js"></script>
+    <script src="js/gem.js"></script>
     <script src="js/enemy.js"></script>
     <script src="js/player.js"></script>
     <script src="js/app.js"></script>
